Improve jUnit integration