@@ -13,7 +13,6 @@ buildscript {
     }
     dependencies {
         classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: springBootVersion
-        classpath group: 'org.junit.platform', name: 'junit-platform-gradle-plugin', version:  '1.0.1'
         classpath group: 'com.bmuschko', name: 'gradle-docker-plugin', version: '4.3.0'
     }
 }
@@ -21,7 +20,6 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'application'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
@@ -87,15 +85,10 @@ dependencies {
     // JUnit family
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
-    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine'
 }
 
-junitPlatform {
-    enableStandardTestTask = true
-}
 test {
     useJUnitPlatform()
-    jvmArgs(['--enable-preview'])
 }
 
 startScripts { enabled = false }        // to avoid build fails because of Gradle application plugin 
